<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.moham.gulfxone.LoginActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="245dp">

        <EditText
            android:id="@+id/etEmailUsr"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:ems="10"
            android:hint="Username or email address"
            android:inputType="textEmailAddress"
            tools:ignore="HardcodedText"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="159dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="Suspicious0dp"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="211dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_editor_absoluteY="434dp"
            tools:text="Log In" />

        <ImageButton
            android:id="@+id/btnFingerprint"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:contentDescription="@android:string/fingerprint_icon_content_description"
            android:visibility="invisible"
            app:srcCompat="?android:attr/fingerprintAuthDrawable"
            tools:targetApi="m" />

        <TextView
            android:id="@+id/linkToRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/not_a_user_click_to_register"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_editor_absoluteY="494dp"
            tools:text="NOT A USER? CLICK TO REGISTER" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
